# efitest

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  discoverer.cpp  script_injector.cpp
cmake/: efitest-build.cmake  efitest-init.cmake  efitest-prebuild.cmake  efitest.cmake
discoverer/: CMakeLists.txt  discoverer.cpp
include/efitest/: assert.h  efitest.h  efitest_api.h  efitest_init.h  efitest_utils.h
src/: code_renderer.c  code_renderer.h  efitest.c  utils.h
test/: test.c  test_noop.c
